--- a/src/Makefile
+++ b/src/Makefile
@@ -1,20 +1,20 @@
 # Common
 SYS = $(shell uname)
 CC = gcc
-DEBUG_FLAGS =#-g -fsanitize=adress # dont work with gcov and verter faild with him
-FLAGS = -c -Wall -Wextra -Werror $(DEBUG_FLAGS) -std=c11
+DEBUG_FLAGS = -Wall -Wextra -Werror #-g -fsanitize=address
+FLAGS = -c  $(DEBUG_FLAGS) -std=c11
 LEAKS = nothing
 
 # Library
 LIB_SRC = lib/
-SRCS = $(addprefix $(LIB_SRC), s21_add)
+SRCS = $(addprefix $(LIB_SRC), s21_add.c s21_sub.c s21_mod.c s21_mul.c s21_div.c s21_help_func.c s21_other_func.c s21_converters.c s21_compare.c)
 OBJS = $(SRCS:%.c=%.o)
 
 LIB_NAME = s21_decimal.a
 LIB_FLAGS = -lcheck -lm -lpthread
 
 # Testing
-TEST_SRC = test_files/s21_test_decimal.c
+TEST_SRC = test_files/*.c
 TEST_OBJ = $(TEST_SRC:.c=.o)
 
 
@@ -24,7 +24,7 @@ GCOV_INFO = gcov_result.info
 
 ifeq ($(SYS), Darwin) # Проверяем ОС
 	LIB_FLAGS = -lcheck
-	LEAKS = leaks --atExit -- test
+	LEAKS = leaks -atExit -- ./gcov_test
 else
 	LIB_FLAGS = -lcheck -lsubunit -pthread -lrt -lm
 	LEAKS = CK_FORK=no valgrind --vgdb=no --leak-check=full --show-leak-kinds=all --track-origins=yes --verbose --log-file=RESULT_VALGRIND.txt ./test
@@ -39,7 +39,7 @@ s21_decimal.a: $(OBJS)
 %.o: %.c s21_decimal.h
 	$(CC) $(FLAGS) $< -o $@
 clean:
-	rm -rf lib_obj ./lib/*.o ./*.a ./*.o ./a.out gcov_test *.html *.css report ./*.gcno ./*.gcda ./*.info ./math_o ./*.dSYM ./CPPLINT* test ./a.out
+	rm -rf lib_obj lib/*.o ./*.a ./*.o ./a.out gcov_test *.html *.css report lib/*.dSYM ./*.gcno ./*.gcda ./*.info ./*.dSYM ./CPPLINT*
 
 test: s21_decimal.a
 	$(CC) $(TEST_FLAGS_GCOV) $(TEST_SRC) $(SRCS) $(LIB_NAME) $(LIB_FLAGS) -o gcov_test $(shell pkg-config --libs --cflags check)
@@ -52,11 +52,15 @@ gcov_report: s21_decimal.a
 	open ./report/index.html
 
 check: test
-	cppcheck --enable=all --suppress=missingIncludeSystem --inconclusive --check-config *.c *.h
+	cp ../materials/linters/.clang-format .
+	clang-format -style=google -i lib/*.c s21_decimal.h test_files/*.c test_files/*.h
+	clang-format -style=google -n lib/*.c s21_decimal.h test_files/*.c test_files/*.h
+	rm -rf .clang-format
+	cppcheck --enable=all --suppress=missingIncludeSystem --inconclusive --check-config *.c *.h lib/*.c
 	cp ../materials/linters/CPPLINT.cfg .
 	python3 ../materials/linters/cpplint.py --extension=c lib/*.c lib/*.h
 	rm -rf CPPLINT.cfg
-	cp ../materials/linters/.clang-format .
-	clang-format -style=google -i lib/*.c lib/*.h s21_decimal.h test_files/*.c test_files/*.h
-	clang-format -style=google -n lib/*.c lib/*.h s21_decimal.h test_files/*.c test_files/*.h
-	rm -rf .clang-format
+	# cp ../materials/linters/.clang-format .
+	# clang-format -style=google -i lib/*.c lib/*.h s21_decimal.h test_files/*.c test_files/*.h
+	# clang-format -style=google -n lib/*.c lib/*.h s21_decimal.h test_files/*.c test_files/*.h
+	# rm -rf .clang-format
